changed the startLine to -1 for unknowns